hphp/hack/test/typecheck/this_vector.php.exp
File "this_vector.php", line 31, characters 12-16:
Invalid condition: a value of type this will always be truthy (Typing[4273])
